--- a/SystemAppSkel/app/src/main/AndroidManifest.xml
+++ b/SystemAppSkel/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    package="com.adot.home"
     android:sharedUserId="android.uid.system">
 
     <application
@@ -20,7 +21,6 @@
             android:theme="@style/Theme.SystemAppSkel">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
